# unitypackage-extractor

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.agent/: PLANS.md
.github/: copilot-instructions.md
.github/workflows/: release.yml
installer/: install.reg  unitypackage-extractor.iss
src/: args.rs  cli_main.rs  dialog.rs  extract.rs  gui_main.rs  main.rs  progress_window.rs  rebuild.rs
src/core/: compress.rs  extract.rs  mod.rs  rebuild.rs
src/ui/: mod.rs
src/ui/cli/: mod.rs  progress.rs
src/ui/gui/: dialog.rs  mod.rs  progress_window.rs
